--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <div class="row sectionBlockLayout" data-component-theme="portalThemeColor1" style="display: flex; flex-wrap: wrap; text-align: left; min-height: auto;">
     <div class="container" style="padding: 0px; display: flex; flex-wrap: wrap; flex-direction: row-reverse;">
         <div class="col-lg-6 columnBlockLayout" style="flex-grow: 1; display: flex; flex-direction: column; min-width: 300px;"><img src="/Geometric-4.png" alt="" name="Geometric-4.png" style="width: 117%; height: 305.545px; max-width: 100%;"></div>
@@ -89,3 +92,5 @@
         </div>
     </div>
 </div>
+</body> 
+</html>
